# HsJupyter

./: .gitignore  .hlint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MERGE_COMPLETED.md  README.md  TestKernel.hs  all.txt  cabal.project  constitution-compliance-audit.md  constitution-compliance-implementation.md  constitution-v1.2.0-compliance-summary.ipynb  docs.txt  hs-jupyter-kernel.cabal  new.prompt.prompt.md  principles.md  test_kernel.py  validation_test.hs
.github/instructions/: programming.md.instructions.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: KernelMain.hs
docs/: architecture.md  ci.md  jupyter_kernel.md  migration-from-install-script.md  roadmap.md
docs/cli/: architecture.md  troubleshooting.md  usage.md
docs/developer/: README.md  build-performance.md  testing-requirements.md
docs/installation/: README.md
docs/performance/: README.md  improvements.md
docs/reference/: configuration.md
docs/releases/templates/: announcement.md
docs/support/kb/: README.md
kernelspec/: notebook.ipynb
kernelspec/hsjupyter/: kernel.json.template
scripts/: install-kernelspec.sh  test_kernel_info.py
scripts/demo/: README.md  phase1_echo_notebook.py  sample-connection.json
specs/001-protocol-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-protocol-bridge/checklists/: requirements.md
specs/001-protocol-bridge/contracts/: execute-echo.yaml
specs/002-runtime-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-runtime-core/checklists/: requirements.md
specs/003-ghc-evaluation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-ghc-evaluation/checklists/: requirements.md
specs/003-ghc-evaluation/contracts/: api-specification.md
specs/004-install-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-install-cli/checklists/: requirements.md
specs/004-install-cli/contracts/: cli-api.md  json-schema.md
specs/005-fix-jupyter-kernel-bug/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-jupyter-kernel-bug/checklists/: requirements.md
src/HsJupyter/: KernelProcess.hs  Router.hs
src/HsJupyter/Bridge/: HeartbeatThread.hs  JupyterBridge.hs  Types.hs
src/HsJupyter/Bridge/Protocol/: Codec.hs  Envelope.hs  Signature.hs
src/HsJupyter/CLI/: Commands.hs  Configuration.hs  Doctor.hs  Install.hs  Output.hs  Types.hs  Utilities.hs
src/HsJupyter/Kernel/: Types.hs
src/HsJupyter/Router/: RequestRouter.hs
src/HsJupyter/Runtime/: Diagnostics.hs  EchoRuntime.hs  ErrorHandling.hs  Evaluation.hs  GHCDiagnostics.hs  GHCRuntime.hs  GHCSession.hs  Manager.hs  ResourceGuard.hs  SessionState.hs  Telemetry.hs
test/integration/: CLIIntegrationSpec.hs  ExecuteEchoSpec.hs  GHCNotebookSpec.hs  JSONOutputIntegrationSpec.hs  RuntimeNotebookSpec.hs  Spec.hs
test/unit/: CLICommandsSpec.hs  CLIInstallSpec.hs  CLITypesSpec.hs  CrossPlatformSpec.hs  DiagnosticsSpec.hs  DoctorSpec.hs  ErrorHandlingSpec.hs  GHCDiagnosticsSpec.hs  GHCRuntimeSpec.hs  GHCSessionSpec.hs  ObservabilitySpec.hs  PerformanceSpec.hs  ProtocolEnvelopeSpec.hs  ResourceGuardSpec.hs  RuntimeManagerSpec.hs  SessionStateSpec.hs  SignatureValidationSpec.hs  Spec.hs  SystemIntegrationSpec.hs  TelemetrySpec.hs
