cabal-version: 3.0
name:          hs-jupyter-kernel
version:       0.1.0.0
synopsis:      A native Jupyter kernel for Haskell
description:   
  HsJupyter is a production-ready Jupyter kernel for Haskell, implemented
  natively in Haskell. It provides persistent GHC-powered evaluation with
  comprehensive resource management, cancellation support, and full Jupyter
  protocol compliance.
  .
  Key features:
  * Real Haskell evaluation using the hint library
  * Persistent sessions with variable bindings across cells
  * Resource limits (memory, CPU, output size)
  * STM-based cancellation infrastructure
  * Comprehensive error diagnostics
  * Structured logging and telemetry
category:      Development, Compilers/Interpreters
build-type:    Simple
homepage:      https://github.com/jjunho/HsJupyter
bug-reports:   https://github.com/jjunho/HsJupyter/issues
license:       MIT
license-file:  LICENSE
author:        HsJupyter Contributors
maintainer:    dev@hsjupyter.org
copyright:     2024-2025 HsJupyter Contributors
extra-doc-files:
  CHANGELOG.md
  README.md
  CONTRIBUTING.md

source-repository head
  type:     git
  location: https://github.com/jjunho/HsJupyter

common project-settings
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

  build-depends:
    , aeson                 >=2.0      && <2.3
    , aeson-pretty          >=0.8      && <0.9
    , async                 >=2.2      && <2.3
    , base                  >=4.14     && <5
    , bytestring            >=0.10     && <0.13
    , containers            >=0.6      && <0.8
    , cryptonite            >=0.30     && <0.31
    , directory             >=1.3      && <1.4
    , exceptions            >=0.10     && <0.11
    , filepath              >=1.4      && <1.6
    , ghc                   >=9.0      && <9.12
    , hint                  >=0.9      && <0.10
    , mtl                   >=2.2      && <2.4
    , optparse-applicative  >=0.16     && <0.19
    , process               >=1.6      && <1.7
    , random                >=1.2      && <1.3
    , stm                   >=2.5      && <2.6
    , temporary             >=1.3      && <1.4
    , text                  >=1.2      && <2.2
    , time                  >=1.9      && <1.15
    , transformers          >=0.5      && <0.7
    , unix                  >=2.7      && <2.9
    , unordered-containers  >=0.2      && <0.3
    , uuid                  >=1.3      && <1.4
    , vector                >=0.12     && <0.14
    , zeromq4-haskell       >=0.8      && <0.9

library
  import:             project-settings
  exposed-modules:     HsJupyter.KernelProcess
                     , HsJupyter.Bridge.JupyterBridge
                     , HsJupyter.Bridge.HeartbeatThread
                     , HsJupyter.Bridge.Protocol.Codec
                     , HsJupyter.Bridge.Protocol.Envelope
                     , HsJupyter.Kernel.Types
                     , HsJupyter.Router.RequestRouter
                     , HsJupyter.Runtime.Manager
                     , HsJupyter.Runtime.EchoRuntime
                     , HsJupyter.Runtime.GHCRuntime
                     , HsJupyter.Runtime.GHCSession
                     , HsJupyter.Runtime.SessionState
                     , HsJupyter.Runtime.Evaluation
                     , HsJupyter.Runtime.Diagnostics
                     , HsJupyter.Runtime.ErrorHandling
                     , HsJupyter.Runtime.GHCDiagnostics
                     , HsJupyter.Runtime.ResourceGuard
                     , HsJupyter.Runtime.Telemetry
                     , HsJupyter.CLI.Commands
                     , HsJupyter.CLI.Doctor
                     , HsJupyter.CLI.Install
                     , HsJupyter.CLI.Output
                     , HsJupyter.CLI.Types
                     , HsJupyter.CLI.Utilities

  hs-source-dirs:     src
  other-modules:
  default-extensions: OverloadedStrings

executable hs-jupyter-kernel
  import:             project-settings
  hs-source-dirs:     app
  main-is:            KernelMain.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , filepath
    , hs-jupyter-kernel
    , optparse-applicative
    , random
    , zeromq4-haskell
    , stm
    , text
    , time

  default-extensions: OverloadedStrings

test-suite unit
  import:         project-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Spec.hs
  other-modules:
    CLICommandsSpec
    CLIInstallSpec
    CLITypesSpec
    CrossPlatformSpec
    DiagnosticsSpec
    DoctorSpec
    ErrorHandlingSpec
    GHCDiagnosticsSpec
    GHCRuntimeSpec
    GHCSessionSpec
    ObservabilitySpec
    PerformanceSpec
    ProtocolEnvelopeSpec
    ResourceGuardSpec
    RuntimeManagerSpec
    SessionStateSpec
    SignatureValidationSpec
    SystemIntegrationSpec
    TelemetrySpec
  ghc-options:
    -rtsopts
    -with-rtsopts=-T
  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , bytestring
    , clock
    , deepseq
    , hs-jupyter-kernel
    , hspec                 >=2.10
    , hspec-core
    , QuickCheck
    , text
    , time
    , unordered-containers
    , vector

test-suite integration
  import:         project-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/integration
  main-is:        Spec.hs
  other-modules:
    CLIIntegrationSpec
    ExecuteEchoSpec
    GHCNotebookSpec
    RuntimeNotebookSpec
    JSONOutputIntegrationSpec
  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , async
    , bytestring
    , directory
    , filepath
    , hs-jupyter-kernel
    , hspec              >=2.10
    , HUnit
    , network
    , temporary
    , text
    , time
    , zeromq4-haskell
  ghc-options:
    -rtsopts
    -with-rtsopts=-T
