cabal-version: 3.0
name:          hs-jupyter-kernel
version:       0.1.0.0
synopsis:      A native Jupyter kernel for Haskell
description:   
  HsJupyter is a production-ready Jupyter kernel for Haskell, implemented
  natively in Haskell. It provides persistent GHC-powered evaluation with
  comprehensive resource management, cancellation support, and full Jupyter
  protocol compliance.
  .
  Key features:
  * Real Haskell evaluation using the hint library
  * Persistent sessions with variable bindings across cells
  * Resource limits (memory, CPU, output size)
  * STM-based cancellation infrastructure
  * Comprehensive error diagnostics
  * Structured logging and telemetry
category:      Development, Compilers/Interpreters
build-type:    Simple
homepage:      https://github.com/jjunho/HsJupyter
bug-reports:   https://github.com/jjunho/HsJupyter/issues
license:       MIT
license-file:  LICENSE
author:        HsJupyter Contributors
maintainer:    dev@hsjupyter.org
copyright:     2024-2025 HsJupyter Contributors
extra-doc-files:
  CHANGELOG.md
  README.md
  CONTRIBUTING.md

source-repository head
  type:     git
  location: https://github.com/jjunho/HsJupyter

common project-settings
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints

  build-depends:
    , aeson                 >=2.0
    , aeson-casing
    , aeson-pretty
    , async
    , base                  >=4.14 && <5
    , base64-bytestring
    , bytestring
    , containers
    , exceptions
    , cryptonite
    , directory
    , filepath
    , optparse-applicative  >=0.16
    , process
    , unix
    , zeromq4-haskell
    , katip
    , hint

    , mtl
    , random
    , stm
    , text
    , time
    , temporary
    , transformers
    , unordered-containers
    , uuid
    , vector

library
  import:             project-settings
  exposed-modules:     HsJupyter.KernelProcess
                     , HsJupyter.Bridge.Types
                     , HsJupyter.Bridge.HeartbeatThread
                     , HsJupyter.Bridge.Protocol.Codec
                     , HsJupyter.Bridge.Protocol.Signature
                     , HsJupyter.Bridge.Protocol.Envelope
                     , HsJupyter.Kernel.Types
                     , HsJupyter.Router
                     , HsJupyter.Runtime.Manager
                     , HsJupyter.Runtime.EchoRuntime
                     , HsJupyter.Runtime.GHCRuntime
                     , HsJupyter.Runtime.GHCSession
                     , HsJupyter.Runtime.SessionState
                     , HsJupyter.Runtime.Evaluation
                     , HsJupyter.Runtime.Diagnostics
                     , HsJupyter.Runtime.ErrorHandling
                     , HsJupyter.Runtime.GHCDiagnostics
                     , HsJupyter.Runtime.ResourceGuard
                     , HsJupyter.Runtime.Telemetry
                     , HsJupyter.CLI.Commands
                     , HsJupyter.CLI.Doctor
                     , HsJupyter.CLI.Install
                     , HsJupyter.CLI.Output
                     , HsJupyter.CLI.Types
                     , HsJupyter.CLI.Utilities
                     , HsJupyter.Bridge.JupyterBridge

  hs-source-dirs:     src
  other-modules:      Paths_hs_jupyter_kernel
  default-extensions: OverloadedStrings

executable hs-jupyter-kernel
  import:             project-settings
  hs-source-dirs:     app
  main-is:            KernelMain.hs
  build-depends:
    , aeson
    , base
    , bytestring
    , directory
    , filepath
    , hs-jupyter-kernel
    , optparse-applicative
    , random
    , zeromq4-haskell
    , stm
    , text
    , time

  default-extensions: OverloadedStrings

test-suite unit
  import:         project-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/unit
  main-is:        Spec.hs
  other-modules:
    CLICommandsSpec
    CLIInstallSpec
    CLITypesSpec
    CrossPlatformSpec
    DiagnosticsSpec
    DoctorSpec
    ErrorHandlingSpec
    GHCDiagnosticsSpec
    GHCRuntimeSpec
    GHCSessionSpec
    ObservabilitySpec
    PerformanceSpec
    ProtocolEnvelopeSpec
    ResourceGuardSpec
    RuntimeManagerSpec
    SessionStateSpec
    SignatureValidationSpec
    SystemIntegrationSpec
    TelemetrySpec
  ghc-options:
    -rtsopts
    -with-rtsopts=-T
  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , bytestring
    , clock
    , deepseq
    , hs-jupyter-kernel
    , hspec                 >=2.10
    , hspec-core
    , QuickCheck
    , text
    , time
    , unordered-containers
    , vector

test-suite integration
  import:         project-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/integration
  main-is:        Spec.hs
  other-modules:
    CLIIntegrationSpec
    ExecuteEchoSpec
    GHCNotebookSpec
    RuntimeNotebookSpec
    JSONOutputIntegrationSpec
  default-extensions: OverloadedStrings
  build-depends:
    , aeson
    , async
    , bytestring
    , directory
    , filepath
    , hs-jupyter-kernel
    , hspec              >=2.10
    , HUnit
    , network
    , temporary
    , text
    , time
    , zeromq4-haskell
  ghc-options:
    -rtsopts
    -with-rtsopts=-T
